Add a simple rectangle tree (rtree) implementation
In order to efficient store small images, we need to pack them into a
large texture. The rtree handles allocation of small rectangles out of a
much larger whole. As well as tracking free rectangles, it can also be
used to note which parts of the texture are 'pinned' -- that is have
operations currently pending and so can not be modified until that batch
of operations have been flushed. When the rtree is full, i.e. there is no
single free rectangle to accommodate the allocation request, it will
randomly evict an unpinned block large enough to fit the request. The
block may comprise just a single glyph, or a subtree of many glyphs. This
may not be the best strategy, but it is an effective start.

--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -80,6 +80,7 @@ cairo_private = \
 	cairo-private.h \
 	cairo-reference-count-private.h \
 	cairo-region-private.h \
+	cairo-rtree-private.h \
 	cairo-scaled-font-private.h \
 	cairo-skiplist-private.h \
 	cairo-spans-private.h \
@@ -133,6 +134,7 @@ cairo_sources = \
 	cairo-polygon.c \
 	cairo-rectangle.c \
 	cairo-region.c \
+	cairo-rtree.c \
 	cairo-scaled-font.c \
 	cairo-skiplist.c \
 	cairo-slope.c \
