Add new test: curve-to-as-line-to
This test anticipates a future optimization, (already pushed
upstream but not pulled yet), with a buggy implementation
of replacing curve_to with line_to.

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -35,6 +35,7 @@ test_sources = \
 	create-from-png.c				\
 	create-from-png-stream.c			\
 	culled-glyphs.c					\
+	curve-to-as-line-to.c				\
 	dash-caps-joins.c				\
 	dash-curve.c					\
 	dash-no-dash.c					\
