[test] Add degenerate-curve-to
Andrea Canciani (ranma42) pointed out a second bug in the curve-to as
line-to optimisation, that is a curve starting and finishing on the same
point is not necessarily degenerate. This test case exercises 5 different
curves that start and end on the same point.

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -44,6 +44,7 @@ test_sources = \
 	dash-state.c					\
 	dash-zero-length.c				\
 	degenerate-arc.c				\
+	degenerate-curve-to.c				\
 	degenerate-dash.c				\
 	degenerate-path.c				\
 	degenerate-pen.c				\
