--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -291,6 +291,8 @@ REFERENCE_IMAGES = \
 	degenerate-arc.ps3.ref.png \
 	degenerate-arc.ref.png \
 	degenerate-arc.xlib.ref.png \
+	degenerate-curve-to.ref.png \
+	degenerate-curve-to.ps.xfail.png \
 	degenerate-dash.ps.xfail.png \
 	degenerate-dash.ref.png \
 	degenerate-path.ps.argb32.xfail.png \
