--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -20,6 +20,7 @@ test_sources = \
 	clip-nesting.c					\
 	clip-operator.c					\
 	clip-push-group.c				\
+	clip-text.c					\
 	clip-twice.c					\
 	clip-unbounded.c				\
 	clip-zero.c					\
