--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -152,6 +152,8 @@ test_sources = \
 	radial-gradient.c				\
 	random-intersections-eo.c			\
 	random-intersections-nonzero.c			\
+	random-intersections-curves-eo.c		\
+	random-intersections-curves-nz.c		\
 	rectangle-rounding-error.c			\
 	rectilinear-fill.c				\
 	rectilinear-miter-limit.c			\
