--- a/src/Makefile.win32.features
+++ b/src/Makefile.win32.features
@@ -422,6 +422,14 @@ enabled_cairo_headers += $(cairo_meta_headers)
 enabled_cairo_private += $(cairo_meta_private)
 enabled_cairo_sources += $(cairo_meta_sources)
 
+supported_cairo_headers += $(cairo_tee_headers)
+all_cairo_headers += $(cairo_tee_headers)
+all_cairo_private += $(cairo_tee_private)
+all_cairo_sources += $(cairo_tee_sources)
+enabled_cairo_headers += $(cairo_tee_headers)
+enabled_cairo_private += $(cairo_tee_private)
+enabled_cairo_sources += $(cairo_tee_sources)
+
 supported_cairo_headers += $(cairo_user_headers)
 all_cairo_headers += $(cairo_user_headers)
 all_cairo_private += $(cairo_user_private)
