[test] Implicit close
This is a simple test that broke with the determination of rectilinearity
during path construction. I forgot the implicit close on fill and so the
ignored the final diagonal edge and failed to draw the triangle.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -527,6 +527,7 @@ REFERENCE_IMAGES = \
 	image-surface-source.ref.png \
 	image-surface-source.svg12.argb32.xfail.png \
 	image-surface-source.svg12.rgb24.xfail.png \
+	implicit-close.ref.png \
 	infinite-join.ps2.ref.png \
 	infinite-join.ps3.ref.png \
 	infinite-join.ref.png \
