[test] Add clip-stroke
Soeren was the first to report a clipping regression in the xlib backend
with strokes, and provided a test case to exercise the bug. This is an
extension of his test to provide coverage of different clipping and
stroking methods.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -217,6 +217,9 @@ REFERENCE_IMAGES = \
 	clip-push-group.quartz.ref.png \
 	clip-push-group.ref.png \
 	clip-push-group.xlib.ref.png \
+	clip-stroke.ref.png \
+	clip-stroke.xlib.ref.png \
+	clip-stroke.xlib-fallback.ref.png \
 	clip-text.ref.png \
 	clip-text.ps.xfail.png \
 	clip-text.svg.ref.png \
