[test] Add clip-disjoint
Soeren found another bug (thanks Soeren!) in the clipping code - as
reproduced by this test case.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -161,6 +161,8 @@ REFERENCE_IMAGES = \
 	clear.svg12.argb32.xfail.png \
 	clear.svg12.rgb24.xfail.png \
 	clip-all.ref.png \
+	clip-disjoint.ref.png \
+	clip-disjoint.xlib.ref.png \
 	clip-empty.ref.png \
 	clip-fill.ref.png \
 	clip-fill.ps.xfail.png \
