--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -19,11 +19,13 @@ test_sources = \
 	clip-fill.c					\
 	clip-fill-rule.c				\
 	clip-fill-rule-pixel-aligned.c			\
+	clip-fill-unbounded.c				\
 	clip-image.c					\
 	clip-nesting.c					\
 	clip-operator.c					\
 	clip-push-group.c				\
 	clip-stroke.c					\
+	clip-stroke-unbounded.c				\
 	clip-text.c					\
 	clip-twice.c					\
 	clip-unbounded.c				\
