[test] Add ANTIALIAS_NONE variation of twin
I'm off hunting bugs. By using twin with ANTIALIAS_NONE we can construct
a1 glyph images independently of the native font system.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -975,6 +975,8 @@ REFERENCE_IMAGES = \
 	twin.ref.png \
 	twin.svg.ref.png \
 	twin.xlib.ref.png \
+	twin-antialias-none.ref.png \
+	twin-antialias-none.xlib.ref.png \
 	unantialiased-shapes.quartz.ref.png \
 	unantialiased-shapes.ref.png \
 	unbounded-operator.gl.argb32.xfail.png \
