[test] SUBPIXEL_ANTIALIAS varation of twin
Force argb32 glyphs.

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -219,6 +219,7 @@ test_sources = \
 	twin.c						\
 	twin-antialias-gray.c				\
 	twin-antialias-none.c				\
+	twin-antialias-subpixel.c			\
 	unantialiased-shapes.c				\
 	unbounded-operator.c				\
 	user-data.c					\
